<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.born.ecommerce.category.view.ui.ProductList1Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_searchview"
            android:elevation="5dp"
            android:visibility="gone"
            app:defaultQueryHint="Search entire store here...."
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:searchIcon="@null"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/products_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingBottom="8dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/product_list_grid" />

        <ProgressBar
            android:id="@+id/progress_bar_pagination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <TextView
            android:id="@+id/characters_empty_text"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:text="@string/zero_products_found"
            android:textColor="@color/purple_700"
            android:textSize="24sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_fetch_progress"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatToggleButton
                android:id="@+id/btn_layout_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/btnbacktint"
                android:checked="true"
                android:fontFamily="@font/roboto"
                android:textColor="@color/white"
                android:textOff="@string/toggle_btn_gid_text"
                android:textOn="@string/toggle_btn_list_text"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sortB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/btnbacktint"
                android:drawableStart="@drawable/ic_sort_black_24dp"
                android:fontFamily="@font/roboto"
                android:text="@string/button_sort"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filterB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/btnbacktint"
                android:drawableStart="@drawable/ic_filter_list_black_24dp"
                android:fontFamily="@font/roboto"
                android:text="@string/button_filter"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/sortContainerBackLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C4000000"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/sortContainerLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFFFF"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/sort_by_backgroundlayout_text"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#929191" />

            <RadioGroup
                android:id="@+id/sortRG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <RadioButton
                    android:id="@+id/sortByName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:text="@string/sortby_name_text" />

                <RadioButton
                    android:id="@+id/sortByNameDsc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:text="@string/sortby_name_desc_text" />

                <RadioButton
                    android:id="@+id/sortByPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:text="@string/sortby_price_asc_text" />

                <RadioButton
                    android:id="@+id/sortByPriceDsc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:text="@string/sortby_price_desc_text" />

                <RadioButton
                    android:id="@+id/sortByReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:text="@string/sortby_review_asc_text" />

                <RadioButton
                    android:id="@+id/sortByReviewDsc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:text="@string/sortby_review_desc_text" />
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/product_fetch_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>