<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="product1"
            type="com.born.ecommerce.graphql.SearchProductQuery.Item" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btntint"
            app:cardCornerRadius="2dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="fitCenter"
                    app:imageUrlCatProduct="@{product1.image.url}"
                    tools:src="@drawable/dress_men" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image"
                    android:text="@{product1.name}"
                    android:textSize="18sp" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    android:rating="@{Float.valueOf(Double.toString(product1.rating_summary))}"
                    tools:rating="0" />
                <!--                android:rating="@{Float.valueOf(Double.toString(product1.rating_summary))}-->

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/review_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:layout_marginStart="6dp"
                    android:layout_toEndOf="@+id/ratingBar"
                    android:clickable="true"
                    android:textColor="@color/review_color"
                    android:text="@{``+product1.review_count}"
                    tools:text="4" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/review_count"
                    android:textColor="@color/review_color"
                    android:text="@string/reviews_tag" />

                <LinearLayout
                    android:id="@+id/layout_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ratingBar">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_start_tag" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{`$`+product1.price_range.minimum_price.final_price.value}"
                        android:textStyle="bold"
                        tools:text="$ 52.0" />

                </LinearLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_to_cart_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_price"
                    android:backgroundTint="@color/btn_add_cart"
                    android:fontFamily="@font/roboto"
                    android:text="@string/button_add_to_cart"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/wishlist_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/layout_price"
                    android:layout_toEndOf="@+id/add_to_cart_btn"
                    android:background="@color/white"
                    android:src="@drawable/outline_favorite_24" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</layout>